# sha2

./: PAPER.md  README.md  SAT.md 
collision_verify/: CMakeLists.txt  README.md
collision_verify/include/sha2/: compress.hpp  config.hpp  constants.hpp  format.hpp  verifier.hpp
collision_verify/src/: main.cpp
find_dc/: find_dc_model_28_512.py
find_dc/configuration/: unit_function_256.py
junk/: about_flags.md  boolean_flags.md
verify_result/: hash_utils.h  main.cpp
